--- a/app/ourTeam/ourTeam.css
+++ b/app/ourTeam/ourTeam.css
@@ -9,7 +9,7 @@
 .cards-grid {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  /* gap: 20px; */
   width: 90%;
   margin-top: 20px;
   padding-bottom: 50px;
@@ -19,6 +19,7 @@
 .cards-grid > * {
   flex: 0 0 calc(33.33% - 15px);
   max-width: calc(33.33% - 15px);
+  transform: scale(0.8);
   box-sizing: border-box;
 }
 
@@ -34,13 +35,14 @@
 .top-3 > * {
   flex: 0 0 30%;
   max-width: 30%;
+  transform: scale(0.8);
   box-sizing: border-box;
 }
 
 .top-rest {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  /* gap: 10px; */
   width: 100%;
   margin-top: 20px;
   padding-bottom: 50px;
@@ -49,11 +51,12 @@
 }
 .top-rest > * {
   flex: 1 1 calc(25% - 15px);
+  transform: scale(0.91);
   box-sizing: border-box;
 }
 
 .top-3-main {
-  transform: scale(1.3);
+  transform: scale(1.05);
   width: 100%;
   margin-bottom: 5%;
   place-items: center;
@@ -74,9 +77,13 @@
 /* ------------------------------------------------------------------------------------------------------------------------------ */
 
 @media (max-width: 650px) {
+  .cards-grid {
+    width: 100%;
+  }
   .cards-grid > * {
     flex: 0 0 calc(50% - 15px);
     max-width: calc(50% - 15px);
+    transform: scale(0.91);
   }
 
   .top-rest > * {
@@ -102,9 +109,9 @@
 
   .top-3-main {
     order: 1;
-    transform: scale(1.1);
+    transform: scale(1);
     margin-bottom: 10%;
-    margin-top: -40%;
+    margin-top: -20%;
   }
 
   .top-3 > :nth-child(3) {
